2003-08-05  Sam Steingold  <sds@gnu.org>

	* foreign.d (convert_from_foreign): treat NULL as NIL
	(convert_to_foreign): treat NIL as NULL
	* foreign1.lisp (foreign-address-null): removed
	* deprecated.lisp (deprecate): export from the home package
	(foreign-address-null): deprecated

2003-08-05  Sam Steingold  <sds@gnu.org>

	* misc.d (MODULE-INFO): argument `O' returns a copy of
	O(foreign_libraries)
	(environ) [!HAVE_DECL_ENVIRON]: declare
	* m4/putenv.m4 (CL_PUTENV): check for environ

2003-08-05  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (DEF-C-VAR, DEF-CALL-OUT): do not call NOTE-C-VAR
	and NOTE-C-FUN for dynamic objects

2003-08-04  Sam Steingold  <sds@gnu.org>

	extended dynamic object loading from AMIGAOS to WIN32_NATIVE & POSIX
	* m4/dynload.m4 (CL_DYNLOAD): use AC_SEARCH_LIBS
	* constobj.d (foreign_libraries): define
	* constsym.d, subr.d (foreign_library, foreign_library_variable)
	(foreign_library_function): added
	* foreign.d (FOREIGN-LIBRARY, FOREIGN-LIBRARY-VARIABLE):
	(FOREIGN-LIBRARY-FUNCTION): extended to win32 & posix
	* foreign1.lisp (def-c-var, def-call-out): added :LIBRARY option
	* makemake.in (LIBDL): absorbed into LIBS
	* unix.d (dlopen, dlsym, dlclose, dlerror): removed prototypes

2003-08-02  Wolfgang Jenkner <wjenkner@inode.at>
	    Sam Steingold  <sds@gnu.org>

	* condition.lisp (assert): fixed bug a whereby two adjacent
	ASSERTs would redefine ASSERT-RESTART-PROMPT and thus use the
	same closure when in fact they are prompting for different places

2003-08-02  Sam Steingold  <sds@gnu.org>

	use system-wide regex implementation when it is available
	* modules/regexp/regexi.c: include <regex.h>, not "regex.h"
	* modules/regexp/link.sh.in: renamed from link.sh
	* modules/regexp/configure.in: AC_SUBST REGEX_O&REGEX_H
	* modules/regexp/Makefile.in: use REGEX_O&REGEX_H

2003-08-02  Sam Steingold  <sds@gnu.org>

	* modules/wildcard/wildcard.lisp: #include <fnmatch.h>
	* modules/regexp/regexp.lisp (*output-c-functions*)