@@ -1,3 +1,11 @@
+2003-08-06  Sam Steingold  <sds@gnu.org>
+
+	* modules/regexp/regexi.c (mregexec): new function
+	* modules/regexp/regexp.lisp (num-matches, regexec): removed
+	(mregexec): replaces regexec
+	(regexp-exec): return an arbitrary number of matches, not limited
+	by num-matches
+
 2003-08-05  Sam Steingold  <sds@gnu.org>
 
 	* foreign.d (convert_from_foreign): treat NULL as NIL
